Added Statistics Support

--- a/Templates/Standard/index.html
+++ b/Templates/Standard/index.html
@@ -14,8 +14,12 @@
     
     <a href="https://www.instagram.com/thesimpsons" id="userName">@thesimpsons</a>
     <div id="links">
-        <a href="https://pt.wikipedia.org/wiki/Homer_Simpson" target="_blank">Wikipedia</a>
-        <a href="https://foxplay.com/br/forme" target="_blank">IMDB</a>
+        <a class="link" href="https://pt.wikipedia.org/wiki/Homer_Simpson" target="_blank">Wikipedia</a>
+        <a class="link" href="https://foxplay.com/br/forme" target="_blank">IMDB</a>
     </div>
+
+    <!-- Javascript -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+    <script  src="index.js"></script>
 </body>
 </html>
