--- a/Templates/Standard/style.css
+++ b/Templates/Standard/style.css
@@ -36,7 +36,7 @@
     display: block;
     margin: 27px auto;
 }
-#links a{
+.link{
     display: block;
     background-color: var(--accentColor);
     color: var(--bgColor);
@@ -50,7 +50,7 @@
     border: solid var(--accentColor) 2px;
 }
 
-#links a:hover{
+.link:hover{
     background-color: var(--bgColor);
     color: var(--accentColor);
 }
