Fav-icon and Instagram account

--- a/Templates/Nightmare/index.html
+++ b/Templates/Nightmare/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <title>Homer Simpson</title>
+  <link rel="icon" href="pumpkin.png" sizes="32x32">
   <link rel="stylesheet" href="style.css">
 </head>
 
