--- a/Templates/Standard/index.html
+++ b/Templates/Standard/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Homer Simpson</title>
+    <title>Kai Davis</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 </head>
 
 <body>
-    <img id="userPhoto" src="https://i.imgur.com/t8ZX9um.jpg" alt="User Photo">
+    <img id="userPhoto" src="https://ibb.co/k2fkbnC" alt="User Photo">
     
-    <a href="https://www.instagram.com/thesimpsons" id="userName">@thesimpsons</a>
+    <a href="https://www.instagram.com/kailinciaga" id="userName">@kailinciaga</a>
     <div id="links">
-        <a class="link" href="https://pt.wikipedia.org/wiki/Homer_Simpson" target="_blank">Wikipedia</a>
-        <a class="link" href="https://foxplay.com/br/forme" target="_blank">IMDB</a>
+        <a class="link" href="https://www.instagram.com/tippitapofficial" target="_blank">Tippi Tap</a>
+        <a class="link" href="mailto:kaikerrocks@gmail.com" target="_blank">Email Me</a>
     </div>
 
     <!-- Javascript -->
