--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ body {
 	height: 96px;
 	display: block;
 	margin: 35px auto 20px;
-	-webkit-box-shadow: 0px 6px 0px 0px rgba(222, 218, 162, 1);
+	/*-webkit-box-shadow: 0px 6px 0px 0px rgba(222, 218, 162, 1);
 	-moz-box-shadow: 0px 6px 0px 0px rgba(222, 218, 162, 1);
-	/*box-shadow: 0px 6px 0px 0px rgba(222, 218, 162, 1);*/
+	box-shadow: 0px 6px 0px 0px rgba(222, 218, 162, 1);*/
 	transition: all 0.15s;
 }
 
