--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 	-moz-box-shadow: 0px 6px 0px 0px rgba(222, 218, 162, 1);
 	box-shadow: 0px 6px 0px 0px rgba(222, 218, 162, 1);*/
 	transition: all 0.15s;
+	transition: all .3s ease-in-out;
 }
 
 #userPhoto:hover {
