--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 	height: 126px;
 	display: block;
 	margin: 35px auto 20px;
+	box-shadow: 0px 0px 10px 5px rgba(255,255,255,1);
 	/*-webkit-box-shadow: 0px 6px 0px 0px rgba(222, 218, 162, 1);
 	-moz-box-shadow: 0px 6px 0px 0px rgba(222, 218, 162, 1);
 	box-shadow: 0px 6px 0px 0px rgba(222, 218, 162, 1);*/
