--- a/Templates/3D Theme/index.html
+++ b/Templates/3D Theme/index.html
@@ -9,8 +9,8 @@
    </head>
    <body>
         <div class='navbar no-items section' id='navbar'></div>
-        <img alt='User Photo' id='userPhoto' src='https://1.bp.blogspot.com/-v4Yi0oSR0-c/X1YRNalQZLI/AAAAAAAAA6U/xMnEQKBDgPgKFXQONoHthgMbQ91QURBlACLcBGAsYHQ/s0/technopreneur.jpg'/>
-        <spam id='userName'>3D Theme by Farell Faiz</spam>
+        <img alt='User Photo' id='userPhoto' src='Https://telegra.ph/file/762e8b1b46e868cb0888b.jpg'/>
+        <spam id='userName'>3D Theme by Abdul milas</spam>
         <div id='links'>
             <a class='link' href='#yourLink' target='_blank'><i aria-hidden='true' class='fa fa-camera'></i>&#160;&#160;Photography Submission</a>
             <a class='link' href='#yourLink' target='_blank'><i aria-hidden='true' class='ri-discord-fill'></i>&#160;&#160;Discord Server</a>
