--- a/Templates/CasualBlue/index.html
+++ b/Templates/CasualBlue/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8" />
-    <title>Homer Simpson</title>
+    <title>Sneh Patel</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="font-awesome.css" />
     <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
@@ -12,23 +12,23 @@
   </head>
 
   <body>
-    <img id="userPhoto" src="https://i.imgur.com/t8ZX9um.jpg" alt="User Photo"/>
-    <h1>Homer Simpson</h1>
+    <img id="userPhoto" src="https://media.istockphoto.com/photos/hacker-picture-id502860430?b=1&k=20&m=502860430&s=170667a&w=0&h=LfVfbGQiz0Z7WhZ7dJteO2IuXUU1gooSIX_coOG7smI=" alt="User Photo"/>
+    <h1>Sneh Patel</h1>
     <div id="description">
-      Homer Jay Simpson is a fictional character and the protagonist of the
-      American animated sitcom The Simpsons. LinkFree template created by
+      Sneh Patel is btech Student at NIT surat in computer science. LinkFree template created by
       <a href="https://ryanloi.me/" target="_blank">Ryan Loi</a>.
     </div>
     <div id="links">
        
       <a
         class="link"
-        href="https://pt.wikipedia.org/wiki/Homer_Simpson"
+        href="https://www.linkedin.com/in/sneh-patel-b18b081a1/"
         target="_blank"
-        >Wikipedia</a
+        >LinkedIn</a
       >
-      <a class="link" href="https://foxplay.com/br/forme" target="_blank"
-        >IMDB</a
+      
+      <a class="link" href="https://github.com/Snehpatel007" target="_blank"
+        >Github</a
       >
     </div>
 
