--- a/Templates/90'sTheme/index.html
+++ b/Templates/90'sTheme/index.html
@@ -17,9 +17,10 @@
     <div class="instagram">
         <a href="https://www.instagram.com/corgistagrams" id="userName">@corgistagrams</a>
     </div>
-    <div id="links">
-        <a class="link" href="https://pt.wikipedia.org/wiki/Homer_Simpson" target="_blank">Wikipedia</a>
-        <a class="link" href="https://foxplay.com/br/forme" target="_blank">IMDB</a>
+    <div class="links">
+        <button><a class="link" href="https://en.wikipedia.org/wiki/1990s" target="_blank">Wikipedia</a></button>
+        <button><a class="link" href="https://www.imdb.com/title/tt0108778/?ref_=nv_sr_srsg_0"
+                target="_blank">IMDB</a></button>
     </div>
 
     <!-- Javascript -->
