--- a/Templates/90'sTheme/style.css
+++ b/Templates/90'sTheme/style.css
@@ -1,5 +1,7 @@
 * {
 	box-sizing: border-box;
+	cursor: url(https://ani.cursors-4u.net/cursors/cur-12/cur1100.ani),
+		url(https://ani.cursors-4u.net/cursors/cur-12/cur1100.png), auto !important;
 }
 
 img,
@@ -21,6 +23,38 @@ body {
 	font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
+.instagram {
+	text-align: center;
+}
+
 .instagram a {
 	color: aquamarine;
+}
+
+.links {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.links button {
+	width: 20%;
+	margin: 2em;
+	padding: 1em;
+	color: rgb(195, 195, 195);
+	border-top: solid 6px rgb(252, 252, 252);
+	border-left: solid 6px rgb(252, 252, 252);
+	border-bottom: solid 6px rgb(136, 136, 136);
+	border-right: solid 6px rgb(136, 136, 136);
+}
+
+.links button:active {
+	transform: translateY(4px);
+}
+
+.links a {
+	font-family: "Comic Sans MS", "Comic Sans", cursive;
+	text-decoration: none;
+	color: blueviolet;
+	font-size: large;
 }
