--- a/Templates/Shades Of Purple/style.css
+++ b/Templates/Shades Of Purple/style.css
@@ -16,6 +16,10 @@ body {
   gap: 2em;
   align-items: center;
   justify-content: center;
+  background: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(10px);
+  padding: 2em 4em;
+  border-radius: 20px;
 }
 
 .profile-pic {
@@ -47,27 +51,33 @@ a::before {
   justify-content: center;
   font-size: 1.8rem;
   text-decoration: none;
-  color: white;
   padding: 0.5em 3em;
   border-radius: 30px;
-  background: #fd6c4c;
+  background: linear-gradient(180deg, #520a80 0%, #160c31 100%);
   font-weight: bold;
   transform: perspective(1px) translateZ(0);
-  color: black;
+  color: white;
+  text-shadow: 0 1px 0 #ff0e7e;
   transition: all 0.4s;
 }
 
 .profile-link::before {
-  background: purple;
+  background: #0d0941;
   clip-path: inset(0 0 0 100%);
   opacity: 1;
   transition: 0.4s;
   border-radius: 30px;
 }
-.profile-link:hover {
-  color: white;
-}
 
 .profile-link:hover::before {
   clip-path: inset(0 0 0 0);
+}
+
+@media screen and (max-width: 700px) {
+  .main-content {
+    padding: 2em 2em;
+  }
+  .profile-link {
+    font-size: 1.4rem;
+  }
 }
