made some upgradations

--- a/Templates/Shades Of Purple/index.html
+++ b/Templates/Shades Of Purple/index.html
@@ -15,6 +15,14 @@
             <div class="profile-pic-container">
                 <img class="profile-pic" src="./rohit.jpeg" alt="">
             </div>
+            <div class="username">
+                <a
+                href="https://www.instagram.com/otaku_._sempai/"
+                target="_blank"
+                class="username"
+                >@Rohit Purkait</a
+              >
+            </div>
             <div class="profile-links-container">
                 <a href="https://rohit-purkait.netlify.app/" target="_blank" class="profile-link">
                     <i class="fas fa-globe"></i>
