--- a/Templates/bloodyOktober/img/index.html
+++ b/Templates/bloodyOktober/img/index.html
@@ -29,6 +29,11 @@
         <p class="Main__atag"><a href="https://da.wikipedia.org/wiki/Oktoberfest">October fest in Copenhagen 2021</a></p>
     </div >
 
+    <div class="Main__btnlink">
+
+        <a href='https://www.oktoberfestdk.dk/'><button>Oktober fest</button></a>
+
+    </div>
     
 
     
