--- a/Templates/FavouriteTeacherTheme/index.html
+++ b/Templates/FavouriteTeacherTheme/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     
-    <title>My favorite teacher</title>
+    <title>My favourite teacher</title>
 </head>
 
 <body>
     <img id="userPhoto" src="images/troels_profile.png" alt="User Photo">
     
-    <a href="https://www.instagram.com/yourfavouriteteacher/?hl=da" id="userName" target="_blank">@yourfavoriteteacher</a>
+    <a href="https://www.instagram.com/yourfavouriteteacher/" id="userName" target="_blank">@yourfavouriteteacher</a>
     <div id="links">
         <a class="link" href="https://www.imdb.com/title/tt13453608/" target="_blank">IMDB</a>
         <a class="link" href="https://en.wikipedia.org/wiki/Teacher" target="_blank">Wikipedia</a>
