add icon attribution

--- a/Templates/A mocha, please! (Netlify Form)/index.html
+++ b/Templates/A mocha, please! (Netlify Form)/index.html
@@ -66,6 +66,7 @@
         </p>
     </form>
       
-    <p class="text greeting">Have a nice day! 🌈</p>
+    <p class="text greeting">Icons from <a href="https://icons8.com/">icons8</a>. Have a nice day! 🌈</p>
+
 </body>
 </html>
