Added links to magical mystery theme

--- a/Templates/MagicalMysteryTheme/index.html
+++ b/Templates/MagicalMysteryTheme/index.html
@@ -14,8 +14,8 @@
     
     <a href="" id="userName">@Beatles</a>
     <div id="links">
-        <a class="link" href="https://draculatheme.com/" target="_blank">SITE</a>
-        <a class="link" href="https://github.com/dracula/dracula-theme" target="_blank">REPOSITORY</a>
+        <a class="link" href="https://en.wikipedia.org/wiki/Magical_Mystery_Tour" target="_blank">WIKIPEDIA</a>
+        <a class="link" href="https://www.youtube.com/watch?v=l8WMGBuNaus&ab_channel=TheBeatles-Topic" target="_blank">YOUTUBE</a>
     </div>
 
     <footer>
