--- a/Templates/Pink/style.css
+++ b/Templates/Pink/style.css
@@ -2,7 +2,7 @@
 @import url('http://fonts.googleapis.com/css?family=Roboto');
 :root {
     --bgColor:#FFDFDC;
-    --accentColor: #FF7272;
+    --accentColor: #FF738C;
     --complementColor: #FFFFFF;
     --font: 'Roboto', sans-serif;
 }
