--- a/Templates/Standard/index.html
+++ b/Templates/Standard/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Homer Simpson</title>
+    <title>Zachary Henard</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 </head>
