--- a/Templates/Standard/index.html
+++ b/Templates/Standard/index.html
@@ -14,8 +14,8 @@
     
     <a href="https://www.instagram.com/thesimpsons" id="userName">@thesimpsons</a>
     <div id="links">
-        <a class="link" href="https://pt.wikipedia.org/wiki/Homer_Simpson" target="_blank">Wikipedia</a>
-        <a class="link" href="https://foxplay.com/br/forme" target="_blank">IMDB</a>
+        <a class="link" href="https://pt.wikipedia.org/wiki/Homer_Simpson" target="_blank">Portfolio</a>
+        <a class="link" href="https://foxplay.com/br/forme" target="_blank">LinkedIn</a>
     </div>
 
     <!-- Javascript -->
