--- a/Templates/Standard/index.html
+++ b/Templates/Standard/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img id="userPhoto" src="https://i.imgur.com/t8ZX9um.jpg" alt="User Photo">
+    <img id="userPhoto" src="https://imgur.com/a/XuEznSa" alt="User Photo">
     
     <a href="https://www.instagram.com/thesimpsons" id="userName">@thesimpsons</a>
     <div id="links">
