--- a/Templates/Standard/index.html
+++ b/Templates/Standard/index.html
@@ -12,10 +12,9 @@
 <body>
     <img id="userPhoto" src="https://imgur.com/a/XuEznSa" alt="User Photo">
     
-    <a href="https://www.instagram.com/thesimpsons" id="userName">@thesimpsons</a>
     <div id="links">
         <a class="link" href="https://henard.tech" target="_blank">Portfolio</a>
-        <a class="link" href="https://foxplay.com/br/forme" target="_blank">LinkedIn</a>
+        <a class="link" href="https://www.linkedin.com/in/zachary-henard" target="_blank">LinkedIn</a>
     </div>
 
     <!-- Javascript -->
