--- a/Templates/SunMoon/index.html
+++ b/Templates/SunMoon/index.html
@@ -1,51 +1,46 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="pt-BR">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>LinkFree | Guilherme Soares Cota</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
-    <link rel="icon" href="assets/imagens/favicon.png" type="image/x-icon" />
-    <script type="text/javascript" src="assets/js/script.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description">
+    <meta name="keywords">
+    <meta http-equiv="Content-Security-Policy" content="object-src 'none';">
+    <meta name="robots" content="index, follow">
+    <link rel="icon" type="image/x-icon">
+    <meta name="author" content="Guilherme Soares Cota">
+    <title></title>
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="./dist/bundle.min.css">
+    <link defer rel="stylesheet" href="./assets/css/font-awesome.min.css">
+
+    <!-- JavaScript -->
+    <script defer src="./dist/bundle.min.js"></script>
 </head>
 
 <body>
-    <i onclick="mostrar(this)" class="fa fa-moon-o fa-2x night_mode"></i>
+    <header>
+        <!-- Theme toggle button -->
+        <i role="button" title="Alterar tema" class="fa fa-moon-o fa-2x night_mode"></i>
 
-    <img id="userPhoto" src="assets/imagens/perfil.jpg" alt="User Photo">
+        <!-- User profile -->
+        <img id="userPhoto" alt="Foto de perfil" rel="preload">
+        <span id="name" aria-label="Nome" class="no-animation"></span>
+        <span id="bio" aria-label="Biografia"></span>
+    </header>
 
-    <spam id="userName">Guilherme Soares Cota</spam>
+    <main>
+        <!-- Useful links -->
+        <div id="links" aria-labelledby="Links úteis"></div>
+    </main>
 
-    <div id="links">
-        <a class="link" href="https://guilhermesoares.tech" target="_blank" style="border-radius: 25px;"><i
-                class="fa fa-globe" aria-hidden="true"></i> Meu site</a>
-        <a class="link" href="https://github.com/guiscota" target="_blank" style="border-radius: 25px;"><i
-                class="fa fa-github"></i> Github</a>
-        <a class="link" href="https://looptech.com.br" target="_blank" style="border-radius: 25px;"><i
-                class="fa fa-globe" aria-hidden="true"></i> Loop Tech</a>
-    </div>
-
-    <div class="footer">
-        <a href="https://www.instagram.com/guiscota" target="_blank">
-            <i style="line-height: 38px;" class="fa fa-instagram circulo" aria-hidden="true"></i>
-        </a>
-        <a href="https://www.facebook.com/guisoarescota" target="_blank">
-            <i style="line-height: 38px;" class="fa fa-facebook-f circulo" aria-hidden="true"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/guiscota" target="_blank">
-            <i style="line-height: 38px;" class="fa fa-linkedin circulo" aria-hidden="true"></i>
-        </a>
-        <a href="https://api.whatsapp.com/send?text=Ol%C3%A1%20Guilherme!%20Eu%20vi%20o%20seu%20site,%20e%20gostaria%20de%20conversar.&phone=5537999096306" target="_blank">
-            <i style="line-height: 38px;" class="fa fa-whatsapp circulo" aria-hidden="true"></i>
-        </a>
-    </div>
-
-    <!-- Javascript -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <script src="index.js"></script>
+    <footer class="footer">
+        <!-- Social media links -->
+        <div id="socialMedia" aria-label="Redes sociais"></div>
+        <span id="username" aria-label="Nome de usuário"></span>
+    </footer>
 </body>
 
 </html>
