:recycle: refactor: improvement the layout and refactoring

--- a/Templates/DarkMode/index.html
+++ b/Templates/DarkMode/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Homer Simpson</title>
+    <!-- Type your name here -->
+    <title>Your name</title>
+
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
-
 <body>
-    <img id="userPhoto" src="https://i.imgur.com/t8ZX9um.jpg" alt="User Photo">
-    
-    <a href="https://www.instagram.com/thesimpsons" id="userName">@thesimpsons</a>
-    <div id="links">
-        <a class="link" href="https://pt.wikipedia.org/wiki/Homer_Simpson" target="_blank">Wikipedia</a>
-        <a class="link" href="https://foxplay.com/br/forme" target="_blank">IMDB</a>
-    </div>
+    <!-- Put your photo here in src -->
+    <img id="userPhoto" src="https://placehold.co/110x110" alt="User Photo">
 
-    <!-- Javascript -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <script  src="index.js"></script>
+    <!-- Type your username here -->
+    <a href="https://www.instagram.com/thesimpsons" id="userName">@user</a>
+    
+    <!-- Put your name -->
+    <h1>Hello, I am _____!</h1>
+
+    <p>Contact me through the links below: </p>
+
+    <!-- Put the desired link in href -->
+    <div class="links">
+        <a class="link" href="https://www.example.com" target="_blank">Personal website</a>
+
+        <!-- Put the phone number instead of the XXXX
+        Format: +XX (XX) XXXXX-XXXX -->
+        <a class="link" href="https://wa.me/XXXXXXXXXXXXX" target="_blank">WhatsApp</a>
+
+        <a class="link" href="https://www.example.com" target="_blank">Facebook</a>
+        <a class="link" href="https://www.example.com" target="_blank">Instagram</a>
+        <a class="link" href="https://www.example.com" target="_blank">Twitter</a>
+    </div>
 </body>
 </html>
