Adding Instagram and Facebook link inside the code

--- a/Templates/Ancind Theme/index.html
+++ b/Templates/Ancind Theme/index.html
@@ -22,11 +22,8 @@
         </div>
             <div class="linkscard_div">
                 <ul>
-                    <li class="list-item"><a href="https://prakhartiwari0.github.io/" target="_blank"><img src="media/websiteicon.png" alt="Website">Website</a></li>
-                    <li class="list-item"><a href="https://github.com/prakhartiwari0" target="_blank"><img src="media/githubicon.png" alt="GitHub">GitHub</a></li>
-                    <li class="list-item"><a href="https://twitter.com/Prakhartiwari0" target="_blank"><img src="media/twittericon.png" alt="Twitter">Twitter</a></li>
-                    <li class="list-item"><a href="https://www.linkedin.com/in/prakhar-tiwari0" target="_blank"><img src="media/linkedinicon.png" alt="Linkedin">Linkedin</a></li>
-                    <li class="list-item"><a href="https://www.showwcase.com/prakhartiwari0" target="_blank"><img src="media/showwcaseicon.png" alt="Showwcase">Showwcase</a></li>
+                    <li class="list-item"><a href="https://www.instagram.com/beerpongframpula/" target="_blank"><img src="media/instagramicon.png" alt="Instagram">Instagram</a></li>
+                    <li class="list-item"><a href="https://www.facebook.com/beerpongframpula/?locale=it_IT" target="_blank"><img src="media/facebookicon.png" alt="Facebook">Facebook</a></li>
                 </ul>
             </div>
     </div>
