Updating index.html

--- a/Templates/Ancind Theme/index.html
+++ b/Templates/Ancind Theme/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>My Castle</title>
+    <title>Beerpong Frampula</title>
 </head>
 <body>
 
     <div class="profile_card_div">
         <div class="whoami_div">
             <div class="profilepic_div">
-                <img src="media/profilepic.png" alt="" class="profilepic">
+                <img src="media/Logo_Beerpong_SfondoBianco.png" alt="Profile Picture" class="profilepic">
             </div>
             <div class="textinfo">
-                <h1 class="name">Prakhar Tiwari</h1>
+                <h1 class="name">Beerpong Frampula</h1>
                 <h2 class="profession">Student | Web Developer</h2>
             </div>
         </div>
