Updated mages and Favicons:

--- a/Templates/Circuits/index.html
+++ b/Templates/Circuits/index.html
@@ -5,14 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Loading...</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="">
-  <meta property="og:description" content="">
   <link rel="stylesheet" href="styles.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,13 +13,8 @@
     href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Share+Tech+Mono&display=swap"
     rel="stylesheet">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon_io/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon_io/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon_io/favicon-16x16.png">
-  <link rel="manifest" href="./assets/favicon_io/site.webmanifest">
-  <link rel="android-chrome" href="./assets/favicon_io/android-chrome-192x192.png" sizes="192x192">
-  <link rel="android-chrome" href="./assets/favicon_io/android-chrome-512x512.png" sizes="512x512">
-  <link rel="shortcut icon" href="./assets/favicon_io/favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="./assets/avatar.svg">
+  <link rel="shortcut icon" href="./assets/avatar.svg">
 </head>
 
 <body>
